# snake-ai

./: .gitignore  README.md  agent.py  config.py  constants.py  game.py  game_ai.py  game_ai_env.py  game_user.py  model.py  play_ai.py  play_human.py  pyproject.toml  pyrightconfig.json  requirements.txt  snake_game.py  snake_game_ai.py  snake_game_user.py  train_ai.py
model/: snake_32.pth  snake_32_16.pth  wrap_256.pth  wrap_32_64_32.pth  wrap_96_96.pth
model/32/: snake_32.pth  snake_32_best.pth
src/snake_ai/: __init__.py  __main__.py  assets.py  config.py  game.py  logging_utils.py  model.py  play_ai.py  play_human.py  play_user.py  runtime.py  train_ai.py
src/snake_ai/boards/: __init__.py  square_generation.py  square_specs.py
src/snake_ai/core/: __init__.py  game.py
src/snake_ai/runtime/: __init__.py  arcade_runtime.py  helpers.py
src/snake_ai/train/: __init__.py  env.py  model.py  trainer.py
src/snake_ai/visual/: __init__.py  assets.py  colors.py  theme.py
tests/: test_smoke.py
