[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-ai"
version = "0.1.0"
description = "Lightweight snake RL project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "arcade>=3.3.3",
  "torch>=2.2",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
snake_ai = ["assets/fonts/*.ttf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
